--- a/server/package.json
+++ b/server/package.json
@@ -16,6 +16,7 @@
     "dotenv": "^16.4.4",
     "express": "^4.18.2",
     "mongoose": "^8.1.2",
+    "node-cache": "^5.1.2",
     "validator": "^13.11.0"
   },
   "devDependencies": {
