--- a/client/src/.env
+++ b/client/src/.env
@@ -9,3 +9,7 @@ VITE_STORAGE_BUCKET = mern-ecommerce-d5334.appspot.com;
 VITE_MESSAGING_SENDER_ID = 646537827828;
 
 VITE_APP_ID = 1:646537827828:web:5ed45571a29656c3a695a1;
+
+VITE_SERVER = http://localhost:4000;
+
+BASE_URL = http://localhost:4000;
