--- a/client/package.json
+++ b/client/package.json
@@ -11,8 +11,10 @@
   },
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
+    "@stripe/react-stripe-js": "^2.5.0",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
+    "moment": "^2.30.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-hot-toast": "^2.4.1",
@@ -20,7 +22,8 @@
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.0",
     "react-table": "^7.8.0",
-    "sass": "^1.70.0"
+    "sass": "^1.70.0",
+    "stripe": "^14.18.0"
   },
   "devDependencies": {
     "@types/react": "^18.2.55",
