--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.1",
     "@stripe/react-stripe-js": "^2.5.0",
+    "@stripe/stripe-js": "^3.0.5",
+    "@types/react-table": "^7.7.19",
     "axios": "^1.6.7",
     "firebase": "^10.8.0",
     "moment": "^2.30.1",
